--- a/.gitignore
+++ b/.gitignore
@@ -20,10 +20,10 @@
 # misc
 .DS_Store
 # .env.local
-.env.development.local
-.env.test.local
-.env.local
-.env.production.local
+# .env.development.local
+# .env.test.local
+# .env.local
+# .env.production.local
 
 npm-debug.log*
 yarn-debug.log*
